# ong_utils

./: README.md  publish.bat  pyproject.toml  requirements.txt  requirements_credentials.txt  requirements_selenium.txt  requirements_shortcuts.txt  setup.py
ong_utils/: __init__.py  config.py  timers.py  urlib3.py  urllib3.py  utils.py
src/ong_utils/: __init__.py  config.py  credentials.py  desktop_shortcut.py  excel.py  internal_storage.py  selenium_chrome.py  sensitivity_labels.py  ui.py  utils.py
src/ong_utils/office/: office_base.py
tests/: __init__.py  test_config.py  test_excel_utils.py  test_gui_log_print.py  test_internal_storage.py  test_jwt_tokens.py  test_office.py  test_parse_html.py  test_ui.py  test_utils.py
tests/test_files/: access_sample.accdb  excel_sample.xlsx  powerpoint_sample.pptx  word_sample.docx
