[project]
name = "ong_utils"
version = "0.5.0"
# license = {file = "LICENSE.txt"}
authors = [
    { email = "oneirag@yahoo.es", name = "Oscar Neira" }
]
readme = "README.md"
requires-python = ">=3.8"
description = "Common utilities for python projects"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
jwt = [
    "pyjwt"
]
shortcuts =[
    "pyshortcuts",
    "Pillow; sys_platform != 'darwin'",
    "icnsutil; sys_platform == 'darwin'",
    "wheel",
]
xlsx = [
    "openpyxl"
]
selenium = {file = ["requirements_selenium.txt"]}


[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[project.urls]  # Optional
"Homepage" = "https://github.com/Oneirag/ong_utils"
"Source" = "https://github.com/Oneirag/ong_utils"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
